--- a/styles/global.css
+++ b/styles/global.css
@@ -3,7 +3,6 @@
   padding: 0;
   box-sizing:border-box
 }
-
 :root{
   --red:#E3646E;
   --purple:#BB72E9;
@@ -17,13 +16,39 @@
   --gray-500:#C0C4CE;
   --gray-600:#E2E4E9;
 
-  --font-family-asap:'Asap';
-  --font-family-inconsolata:'Inconsolata';
-  --font-family-mavenPro:'Maven Pro';
+  --font-family-asap:'Asap',sans-serif;
+  --font-family-inconsolata:'Inconsolata',sans-serif;
+  --font-family-mavenPro:'Maven Pro',sans-serif;
   --title-lg:400 56px/120%  var(--font-family-asap);
   --title-md: 400 24px/120% var(--font-family-asap);
   --title-sm: 400 16px/120% var(--font-family-asap);
-  --h2: 800 20px/120% var(--font-family-inconsolata);
+  --subtitle: 800 20px/120% var(--font-family-inconsolata);
   --text-md:400 16px/140% var(--font-family-mavenPro);
   --text-sm:400 14px/140% var(--font-family-mavenPro)
 }
+
+h3 {
+  color: var(--gray-600);
+  font: var( --text-md);
+}
+
+p {
+  font: var(--text-sm);
+  color: var(--gray-400);
+}
+
+span {
+  font: var(--text-subtitle);
+  color: var(--red)
+}
+
+#card, .card-3 strong {
+  font: var(--title-sm);
+  color: var(--gray-600);
+}
+
+#card, .card-3 p {
+  margin-top: 8px;
+}
+
+
